--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -7,6 +7,8 @@ body {
 }
 
 .page {
+  position: relative;
+
   height: 100vh;
   width: 100vw;
 
@@ -30,9 +32,7 @@ body {
   max-width: 1024px;
   margin: 0 auto;
   height: 100%;
-}
 
-.column {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
