--- a/src/pages/PageOne/sperms.css
+++ b/src/pages/PageOne/sperms.css
@@ -8,7 +8,7 @@
 
   z-index: 1;
 
-  background-image: url("../../assets/img/sperms/1.svg");
+  background-image: url("../../assets/img/sperms/1.png");
   background-size: contain;
 }
 
@@ -20,6 +20,6 @@
   width: 414px;
   height: 183px;
 
-  background-image: url("../../assets/img/sperms/2.svg");
+  background-image: url("../../assets/img/sperms/2.png");
   background-size: contain;
 }
