--- a/src/pages/PageTwo/sperms.css
+++ b/src/pages/PageTwo/sperms.css
@@ -6,7 +6,7 @@
   width: 1229px;
   height: 753px;
 
-  background-image: url("../../assets/img/sperms/3.svg");
+  background-image: url("../../assets/img/sperms/3.png");
   background-size: contain;
   background-repeat: no-repeat;
 
@@ -23,7 +23,7 @@
   width: 783px;
   height: 480px;
 
-  background-image: url("../../assets/img/sperms/4.svg");
+  background-image: url("../../assets/img/sperms/4.png");
   background-size: contain;
   background-repeat: no-repeat;
 
@@ -40,7 +40,7 @@
   width: 370px;
   right: -59px;
   top: 78px;
-  background-image: url("../../assets/img/sperms/5.svg");
+  background-image: url("../../assets/img/sperms/5.png");
   background-size: contain;
   background-repeat: no-repeat;
 
@@ -56,7 +56,7 @@
   left: 892px;
   width: 783px;
   height: 388px;
-  background-image: url("../../assets/img/sperms/6.svg");
+  background-image: url("../../assets/img/sperms/6.png");
   background-size: contain;
   background-repeat: no-repeat;
 
@@ -73,7 +73,7 @@
   bottom: 39px;
   width: 343px;
   height: 214px;
-  background-image: url("../../assets/img/sperms/7.svg");
+  background-image: url("../../assets/img/sperms/7.png");
   background-size: contain;
   background-repeat: no-repeat;
 
