--- a/src/pages/PageOne/bacteria.css
+++ b/src/pages/PageOne/bacteria.css
@@ -4,7 +4,7 @@
   position: absolute;
   top: 505px;
   left: 22px;
-  background-image: url("../../assets/img/bacteria/1.svg");
+  background-image: url("../../assets/img/bacteria/1.png");
   background-size: contain;
 
   animation-name: bacterium-1;
@@ -19,7 +19,7 @@
   height: 224px;
   top: 642px;
   right: 254px;
-  background-image: url("../../assets/img/bacteria/2.svg");
+  background-image: url("../../assets/img/bacteria/2.png");
   background-size: contain;
 
   animation-name: bacterium-2;
@@ -33,7 +33,7 @@
   right: 51px;
   width: 110px;
   height: 113px;
-  background-image: url("../../assets/img/bacteria/3.svg");
+  background-image: url("../../assets/img/bacteria/3.png");
   background-size: contain;
 
   animation-name: bacterium-3;
@@ -49,7 +49,7 @@
   height: 57px;
   right: 217px;
   top: 63px;
-  background-image: url("../../assets/img/bacteria/4.svg");
+  background-image: url("../../assets/img/bacteria/4.png");
   background-size: contain;
 }
 
@@ -59,7 +59,7 @@
   left: 345px;
   width: 85px;
   height: 78px;
-  background-image: url("../../assets/img/bacteria/5.svg");
+  background-image: url("../../assets/img/bacteria/5.png");
   background-size: contain;
 }
 
@@ -69,7 +69,7 @@
   right: 40px;
   width: 85px;
   height: 78px;
-  background-image: url("../../assets/img/bacteria/5.svg");
+  background-image: url("../../assets/img/bacteria/5.png");
   background-size: contain;
   opacity: 0.3;
 }
@@ -80,7 +80,7 @@
   left: -88px;
   height: 116px;
   width: 214px;
-  background-image: url("../../assets/img/bacteria/6.svg");
+  background-image: url("../../assets/img/bacteria/6.png");
   background-size: contain;
 }
 
