--- a/src/pages/PageThree/bottle.css
+++ b/src/pages/PageThree/bottle.css
@@ -14,7 +14,7 @@
   height: 100%;
   width: 100%;
 
-  background: url("../../assets/img/bottle.svg");
+  background: url("../../assets/img/bottle.png");
   background-repeat: no-repeat;
   background-size: contain;
 
